47
================

21/04/23 Mobile interface, take photo and convert to PDF #929
20/04/23 Use configuration item to control name/couple format #741
20/04/23 Show count of records displayed in waiting list
20/04/23 Add location filter to photo uploader #1249
20/04/23 person_similar was checking incoming mobile against home, incorrectly
19/04/23 Second contact fields for people #741
17/04/23 Use map link for incidents, make sure it opens in app on Android/iOS #101
15/04/23 Fix bug where the wrong incident number was shown on citations
13/04/23 reinstall_default_data only needs to clear lookup tables
11/04/23 Re-implementation of mobile photo uploader #1249
10/04/23 Add Warning/OwnerWarning wordkeys to access warning content
07/04/23 Fix email templates when emailing ACO from incident
06/04/23 Add person: similar check in case they put cell phone in home phone #1170
03/04/23 URI encode links properly for QRLink/QRShare in document templates
30/03/23 Truncate online form fields headed to short text columns
29/03/23 Fix formatting bug where Move->Reclaim an animal would not create costs
23/03/23 csv_import service method #1230
21/03/23 Always use oldest template animal when multiple are available
20/03/23 Set hold until date when cloning from a template
15/03/23 Fix to only default hold date if the user interacted to tick hold
11/03/23 Truncate incoming form preview in display table
10/03/23 Fix to merge person comments when merging people
06/03/23 Fix to ensure changes made via movement validation are audited #1242
06/03/23 Handle returning retailers via movement validation like fosters #1242
03/03/23 Fix bug where TCP connection errors were not handled during csv import
01/03/23 Add send email retry mechanism for cron tasks (reports/diaries) #1238
24/02/23 Add event menu items (Roman+Saggi) #1234
24/02/23 Add Romanian locale
23/02/23 cron.animalcsv/personcsv should output str instead of bytes to stdout