@@ -1,6 +1,7 @@
 47
 ================
 
+22/04/23 Attempt to remove incoming processed forms when browser window closes
 21/04/23 Mobile interface, take photo and convert to PDF #929
 20/04/23 Use configuration item to control name/couple format #741
 20/04/23 Show count of records displayed in waiting list
